# ezto_video

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README.old.md  ezto_video_langgraph_flow_parity_plan.md
.claude/: settings.local.json
ezto-agent/: .env.example  .gitignore  pyproject.toml  setup_wsl.sh  start_backend.sh
ezto-agent/app/api/: models.py  routes.py  server.py  workflow_manager.py
ezto-agent/app/core/: __init__.py  llm.py  logger.py
ezto-agent/assets/: README.md
ezto-agent/docs/: web_video_graph_guide.md
ezto-agent/frontend/: index.html  package-lock.json  package.json
ezto-agent/scripts/: fix_chapter_registry.sh  fix_vpn_bashrc.sh  start_backend.sh  test_agent_loop.py  test_deepseek_tool_calls.py  test_full_build.py  vpn_bashrc_snippet.sh
ezto-agent/tests/: test_agent_industrial.py  test_agent_timeout.py  test_chapter_brief.py  test_chapter_build_modes.py  test_chapter_ids.py  test_chapter_policies.py  test_chapter_registry_meta.py  test_chapter_validation.py  test_checkpoint_routing.py  test_craft_precheck.py  test_craft_review.py  test_dev_server.py  test_execution.py  test_llm_models.py  test_missing_assets.py  test_narration_args.py  test_node_labels.py  test_parser.py  test_preview_navigation.py  test_project_service.py  test_read_tools.py  test_repair_guards.py  test_repair_script.py  test_review_repair_loop.py  test_scaffold_trace.py  test_state_snapshot.py  test_step_indexing.py  test_team_discuss.py  test_theme_kit.py  test_theme_service.py  test_token_usage.py  test_tool_runtime.py  test_web_nodes.py  test_workspace_guards.py
(+253 files in other folders)
